[gd_scene load_steps=4 format=2]

[ext_resource path="res://materials/matTransitionEffect.tres" type="Material" id=1]
[ext_resource path="res://src/interfaces/TransitionStates.gd" type="Script" id=3]
[ext_resource path="res://src/interfaces/TransitionScreen.gd" type="Script" id=4]

[node name="TransitionScren" type="ColorRect"]
material = ExtResource( 1 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 3 )

[node name="TransitionTween" type="Tween" parent="."]
[connection signal="tween_all_completed" from="TransitionTween" to="." method="_on_TransitionTween_tween_all_completed"]
